Change steamcmd location to library folder instead of tmp