@@ -3,6 +3,8 @@ package steamcmd;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
@@ -33,12 +35,11 @@ public class SteamCMDBuilder {
 	}
 	
 	public SteamCMD build() {
-		
 		if (this.localDir == null) {
-			this.localDir = System.getProperty("java.io.tmpdir") + File.separator;
+			this.localDir = System.getProperty("java.io.tmpdir");
 		}
 		
-		this.localDir = this.localDir + "steamcmd" + File.separator;
+		this.localDir = this.localDir + File.separator + "steamcmd" + File.separator;
 		
 		String steamCmdLocal = localDir;
 		String steamcmdURL = "";
@@ -111,16 +112,16 @@ public class SteamCMDBuilder {
 	private File downloadSteamCMD(String steamcmdURL, File zipFile) {
 		URL url;
 		try {
-			url = new URL(steamcmdURL);
+			url = new URI(steamcmdURL).toURL();
 			ReadableByteChannel rbc = Channels.newChannel(url.openStream());
 			FileOutputStream fos = new FileOutputStream(zipFile);
 			fos.getChannel().transferFrom(rbc, 0, Long.MAX_VALUE);
 			fos.close();
 			rbc.close();
-		} catch (IOException e) {
+			
+		} catch (IOException | URISyntaxException e) {
 			throw new RuntimeException(e);
 		}
-		
 		return zipFile;
 	}
 	
